# mlops-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.directory_name }}/: README.md  pyproject.toml
{{ cookiecutter.directory_name }}/config/: config.py
{{ cookiecutter.directory_name }}/notebooks/: EDA.ipynb
